Allow matchers on the GET alerts endpoint
Previously, the only real need to filter alerts was to get one alert by
ID. This commit adds the ability to filter alerts using matchers, which
allows for more complex queries.
